Ensure better readability for btn-xs

--- a/app/assets/stylesheets/hera/modules/_buttons.scss
+++ b/app/assets/stylesheets/hera/modules/_buttons.scss
@@ -290,7 +290,7 @@
 
 .btn-xs {
   border-radius: 3px;
-  font-size: 12px;
+  font-size: 0.9rem;
   line-height: 1.5;
   padding: 1px 5px;
 }
